--- a/src/app/become-a-sponsor/become-a-sponsor.component.html
+++ b/src/app/become-a-sponsor/become-a-sponsor.component.html
@@ -5,22 +5,30 @@
         while at the same time providing you an opportunity to connect your business with the broader community.
     </p>
     <article class="grid grid-cols-3 gap-12 h-96">
-        <figure class="rounded border-4 bg-gray-800 border-amber-800 py-8 grid-rows-10">
-            <div class="text-center mb-5">
-                <strong class="text-3xl">Dinks Gold Sponsor</strong>
+        <figure class="rounded bg-gray-800 h-full w-full">
+            <div class="relative rounded bg-amber-800 h-full w-full -translate-x-1.5 translate-y-1.5"
+                style="z-index: -1;">
             </div>
-            <ul class="list-disc mx-12 mb-36">
-                <li>1 VIP tier annual membership</li>
-                <li>Banner hung in facility for 1 year</li>
-                <li>Logo on website for 1 year</li>
-                <li>1 VIP tier annual membership</li>
-            </ul>
-            <p class="text-4xl text-amber-800 text-center">
-                $1000/year
-            </p>
+            <div class="flex flex-col py-8 -translate-y-full">
+                <div class="text-center mb-5">
+                    <strong class="text-3xl">Dinks Gold Sponsor</strong>
+                </div>
+                <ul class="list-disc mx-12 mb-36">
+                    <li>1 VIP tier annual membership</li>
+                    <li>Banner hung in facility for 1 year</li>
+                    <li>Logo on website for 1 year</li>
+                    <li>1 VIP tier annual membership</li>
+                </ul>
+                <p class="text-4xl text-amber-800 text-center">
+                    $1000/year
+                </p>
+            </div>
         </figure>
-        <figure class="rounded border-4 bg-gray-800 border-amber-300 py-8">
-            <div class="flex flex-col">
+        <figure class="rounded bg-gray-800 h-full w-full">
+            <div class="relative rounded bg-amber-300 h-full w-full -translate-x-1.5 translate-y-1.5"
+                style="z-index: -1;">
+            </div>
+            <div class="flex flex-col py-8 -translate-y-full">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">Premier Entry Sponsor</strong>
                 </div>
@@ -34,12 +42,15 @@
                 <p class="text-4xl text-amber-300 text-center">$2500/year</p>
             </div>
         </figure>
-        <figure class="rounded border-4 bg-gray-800 border-sky-500 py-8">
-            <div class="flex flex-col">
+        <figure class="rounded bg-gray-800 h-full w-full">
+            <div class="relative rounded bg-sky-500 h-full w-full -translate-x-1.5 translate-y-1.5"
+                style="z-index: -1;">
+            </div>
+            <div class="rounded flex flex-col py-8 -translate-y-full">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">"The Big Dill" Court Sponsor</strong>
                 </div>
-                <ul class="list-disc mx-12  mb-12">
+                <ul class="list-disc mx-12 mb-12">
                     <li>2 VIP tier annual membership</li>
                     <li>Court naming rights (seen every time courts are booked) ex. ABC Corp - Court 1</li>
                     <li>On court branding - banner, net logo & more (sponsor responsibility)</li>
