--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,74 +1,82 @@
 <main>
     <h1 class="text-5xl text-center my-16">Rates & Memberships</h1>
-    <!-- Hours/rates -->
-    <h2 class="text-4xl mb-5">Hours/Rates</h2>
-    <!-- Open play -->
-    <h3 class="text-2xl mb-5 text-center">Open play</h3>
-    <article class="grid grid-cols-2 mb-10">
-        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
-            <strong class="text-sky-600">Monday-Friday</strong>
-            <span>
-                <span class="flex justify-center">
-                    <p class="text-3xl">$7/$8/$9</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-                <p class="text-xl">determined by membership</p>
-            </span>
-            <p class="text-center mt-2">8AM-11AM</p>
-        </div>
-        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
-            <strong class="text-sky-600">Friday, Saturday, Sunday</strong>
-            <span>
-                <span class="flex justify-center">
-                    <p class="text-3xl">$7/$8/$9</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-                <p class="text-xl">determined by membership</p>
-            </span>
-            <p class="text-center mt-2">8PM-11PM</p>
-        </div>
-    </article>
-    <!-- Court reservations -->
-    <h3 class="text-2xl mb-5 text-center">Court reservations</h3>
-    <article class="grid grid-cols-3 mb-10">
-        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
-            <strong class="text-sky-600">Monday-Friday</strong>
-            <span style="display: flex; justify-content: center; ">
-                <p class="text-3xl">$16</p>
-                <p class="mt-3 ml-1">/hour</p>
-            </span>
-            <p class="text-center mt-2">6AM-4PM</p>
-        </div>
-        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
-            <strong class="text-sky-600">Monday-Friday (Evenings)</strong>
-            <span style="display: flex; justify-content: center; ">
-                <p class="text-3xl">$22</p>
-                <p class="mt-3 ml-1">/hour</p>
-            </span>
-            <p class="text-center mt-2">4PM-12AM</p>
-        </div>
-        <div class="mx-1 rounded rounded border-2 border-neutral-400 p-5 text-center">
-            <strong class="text-sky-600">Saturday/Sunday</strong>
-            <span style="display: flex; justify-content: center; ">
-                <p class="text-3xl">$28</p>
-                <p class="mt-3 ml-1">/hour</p>
-            </span>
-            <p class="text-center mt-2">All day</p>
-        </div>
+    <!-- Rates -->
+    <article class="bg-striped p-5 mb-10">
+        <h2 class="text-4xl mb-5">Rates <em class="text-gray-400 text-3xl">(Membership required)</em></h2>
+        <!-- Open play -->
+        <section class="grid grid-cols-2 gap-x-5 text-center">
+            <h3 class="col-span-2 text-2xl text-center mb-5">Open play</h3>
+
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <div class="mb-2"><strong class="text-sky-600">Monday-Friday</strong></div>
+                <div class="mb-2">
+                    <span class="flex justify-center">
+                        <p class="text-3xl">$7/$8/$9</p>
+                        <p class="mt-3 ml-1">/hour</p>
+                    </span>
+                    <p class="text-xl">determined by membership</p>
+                </div>
+                <p>8AM-11AM</p>
+            </div>
+
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <div class="mb-2"><strong class="text-sky-600">Friday, Saturday, Sunday</strong></div>
+                <div class="mb-2">
+                    <span class="flex justify-center">
+                        <p class="text-3xl">$7/$8/$9</p>
+                        <p class="mt-3 ml-1">/hour</p>
+                    </span>
+                    <p class="text-xl">determined by membership</p>
+                </div>
+                <p>8PM-11PM</p>
+            </div>
+        </section>
+
+        <!-- Court reservations -->
+        <section class="grid grid-cols-3 gap-x-5 text-center">
+            <h3 class="col-span-3 text-2xl my-5">Court reservations</h3>
+
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <div class="mb-2"><strong class="text-sky-600">Monday-Friday</strong></div>
+                <div class="mb-2">
+                    <span class="flex justify-center">
+                        <p class="text-3xl">$16</p>
+                        <p class="mt-3 ml-1">/hour</p>
+                    </span>
+                </div>
+                <p>6AM-4PM</p>
+            </div>
+
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+                <div class="mb-2"><strong class="text-sky-600">Monday-Friday (Evenings)</strong></div>
+                <div class="mb-2">
+                    <span class="flex justify-center">
+                        <p class="text-3xl">$22</p>
+                        <p class="mt-3 ml-1">/hour</p>
+                    </span>
+                </div>
+                <p>4PM-12AM</p>
+            </div>
+
+            <div class="rounded border-2 border-neutral-400 bg-gray-900 transparent-20 p-5">
+                <div class="mb-2"><strong class="text-sky-600">Saturday/Sunday</strong></div>
+                <div class="mb-2">
+                    <span class="flex justify-center">
+                        <p class="text-3xl">$28</p>
+                        <p class="mt-3 ml-1">/hour</p>
+                    </span>
+                </div>
+                <p>6AM-12AM</p>
+            </div>
+        </section>
     </article>
 
-    <!-- memberships -->
-    <h2 class="text-4xl mb-5">Annual Memberships</h2>
-    <!-- <section class="m-2 text-center rounded border-2 border-sky-600 bg-sky-50 px-28 p-2">
-        <strong class="text-black">Introductory Membership Rates</strong>
-        <p class="px-24 text-black">
-            12 month period will begin Jan 1 2024 with membership benefits beginning
-            when
-            Dinks opens (est Oct 2023) $25 activation fee waived with memberships purchased before Grand Opening
-        </p>
-    </section> -->
-    <article class="grid grid-cols-4">
-        <table class="border-separate border-spacing-2 col-span-3">
+    <!-- Memberships -->
+    <article class="grid grid-cols-4 gap-y-5 mb-10">
+        <div></div>
+        <h2 class="col-span-4 text-4xl">Annual Memberships</h2>
+        <table class="col-span-3 border-separate border-spacing-2">
+            <!-- Headers -->
             <thead>
                 <tr>
                     <th class="rounded border border-gray-600 bg-gray-800 text-white p-5">Membership tier</th>
@@ -87,7 +95,7 @@
                     <td class="rounded border-2 border-amber-800 p-5">$45</td>
                     <td class="rounded border-2 border-amber-800 p-5">$9</td>
                     <td class="rounded border-2 border-amber-800 p-5">5 days in advance</td>
-                    <td class="rounded border-2 border-amber-800 p-3 text-lg text-red-600">✘</td>
+                    <td class="rounded border-2 border-amber-800 text-lg text-red-600 p-3">✘</td>
                 </tr>
             </tbody>
             <!-- Standard -->
@@ -97,7 +105,7 @@
                     <td class="rounded border-2 border-amber-300 p-5">$125</td>
                     <td class="rounded border-2 border-amber-300 p-5">$8</td>
                     <td class="rounded border-2 border-amber-300 p-5">2 weeks in advance</td>
-                    <td class="rounded border-2 border-amber-300 p-3 text-xl text-green-600">✓</td>
+                    <td class="rounded border-2 border-amber-300 text-xl text-green-600 p-3">✓</td>
                 </tr>
             </tbody>
             <!-- VIP -->
@@ -107,39 +115,46 @@
                     <td class="rounded border-2 border-sky-500 p-5">$195</td>
                     <td class="rounded border-2 border-sky-500 p-5">$7</td>
                     <td class="rounded border-2 border-sky-500 p-5">6 months in advance</td>
-                    <td class="rounded border-2 border-sky-500 p-3 text-xl text-green-600">✓</td>
+                    <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
                 </tr>
             </tbody>
         </table>
-        <div class="rounded col-span-1 m-2 px-8 pt-5 bg-dinks-blue">
-            <div class="mb-5"><strong class="text-xl">All tiers include:</strong></div>
-            <p class="mb-28">
-                Personalized door access upon signing up for open play or booking a
-                court
-            </p>
-            <button class="rounded bg-dinks-red hover:bg-dinks-red-dark py-2" style="width: 100%;"
-                (click)="toggleModal()">Sign me up!</button>
+        <div class="rounded m-2 self-end">
+            <!-- <div class="absolute bg-dotted h-48 w-80 translate-x-12 translate-y-28 rotate-1" style="z-index: -10;"> -->
+            <div class="absolute bg-dotted h-48 w-80 translate-x-20 -translate-y-16" style="z-index: -10;">
+            </div>
+            <div class="flex-col justify-around bg-dinks-blue px-6 py-6">
+                <div class="pb-7">
+                    <div class="mb-3"><strong class="text-xl">All tiers include:</strong></div>
+                    <p>
+                        Personalized door access upon signing up for open play or booking a
+                        court
+                    </p>
+                </div>
+                <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2 mt-4 w-full" (click)="toggleModal()">
+                    Sign me up!
+                </button>
+            </div>
         </div>
     </article>
 </main>
 
 @if (showModal) {
 <article>
-    <figure class="bg-smoked-background fixed"
-        style="width: 100vw; height: 100vh; top: 50%; left: 50%;  transform: translate(-50%, -50%)"
-        (click)="toggleModal()">
+    <figure class="bg-smoked-background fixed w-screen h-screen top-1/2 left-1/2"
+        style=" transform: translate(-50%, -50%)" (click)="toggleModal()">
     </figure>
-    <figure class="rounded bg-dinks-blue py-8 px-5 fixed"
+    <figure class=" bg-dinks-blue rounded fixed py-8 px-5"
         style="top: 50%; left: 50%;  transform: translate(-50%, -50%); z-index: 1">
         <!-- X button -->
-        <button (click)="toggleModal()" class="p-3 text-2xl absolute" style="top: 0; right: 0; ">✕</button>
+        <button (click)="toggleModal()" class="text-2xl absolute p-3" style="top: 0; right: 0; ">✕</button>
 
         <!-- Content -->
-        <strong class="mb-5 ml-5 mr-20 text-3xl">How to sign up for a membership:</strong>
+        <div class="mb-5 ml-5"><strong class="text-3xl">How to sign up for a membership:</strong></div>
         <div class="grid grid-cols-2 gap-8 p-5">
             <div class="rounded border-2 border-gray-600 p-5">
                 <strong class="text-lg">Download the app!</strong>
-                <ul class="mt-4 ml-5 list-decimal">
+                <ul class="list-decimal mt-4 ml-5 ">
                     <li>Download Court Reserve app</li>
                     <li>Create an account</li>
                     <li>Search and select Dinks Pickleball from drop down menu</li>
@@ -148,7 +163,7 @@
             </div>
             <div class="rounded border-2 border-gray-600 p-5">
                 <strong class="text-lg">Use the website!</strong>
-                <ul class="mt-4 ml-5 list-decimal">
+                <ul class="list-decimal mt-4 ml-5 ">
                     <li>Visit <a href="https://www.courtreserve.com" target="_blank">www.courtreserve.com</a></li>
                     <li>Select "Login" > "Don't have an Account?" > "I'm a player"</li>
                     <li>Search and select Dinks Pickleball</li>
