--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,18 @@ body {
 a {
     @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600
 }
+
+.bg-striped {
+    background: repeating-linear-gradient(-45deg,
+            transparent,
+            transparent 16px,
+            #46529835 10px,
+            #46529835 20px);
+}
+
+.bg-dotted {
+    background: transparent;
+    background-image: radial-gradient(#c01422 2px, transparent 0);
+    background-size: 16px 16px;
+    background-position: -10px -15px;
+}
