--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,6 +1,70 @@
-<main>
+<article>
     <h1 class="text-5xl text-center my-16">Leagues & Tournaments</h1>
-    <h2 class="text-4xl">Leagues</h2>
-    <br>
-    <h2 class="text-4xl">Tournaments</h2>
-</main>
+
+    <!-- Leagues -->
+    <section class="mb-10">
+        <h2 class="text-4xl mb-5">Leagues</h2>
+        <figure class="flex flex-col rounded border-4 border-gray-800 w-full p-10">
+            <div class="flex justify-between mb-10">
+                <span>
+                    <h3 class="text-2xl"><strong>Spring League</strong></h3>
+                    <div class="mt-1.5">April 15th - May 20th</div>
+                </span>
+
+                <div class="flex text-center">
+                    <div class="rounded border border-dinks-red ml-5 p-1 px-5">
+                        <strong>1st week</strong>
+                        <p>League play</p>
+                    </div>
+                    <div class="rounded border border-dinks-red ml-5 p-1 px-5">
+                        <strong>2nd week</strong>
+                        <p>League play</p>
+                    </div>
+                    <div class="rounded border border-dinks-red ml-5 p-1 px-5">
+                        <strong>3rd week</strong>
+                        <p>League play</p>
+                    </div>
+                    <div class="rounded border border-dinks-red ml-5 p-1 px-5">
+                        <strong>4th week</strong>
+                        <p>League play</p>
+                    </div>
+                    <div class="rounded border border-dinks-red ml-5 p-1 px-5">
+                        <strong>5th week</strong>
+                        <p>League play</p>
+                    </div>
+                    <div class="rounded bg-dinks-blue ml-5 p-1 px-5">
+                        <strong>Last week</strong>
+                        <p>Tournament</p>
+                    </div>
+                </div>
+
+                <div class="rounded flex border border-green-600 text-green-600 ml-5 p-1 px-5">
+                    <p class="text-5xl">$125</p>
+                    <p class="text-xl mt-6 ml-1">/team</p>
+                </div>
+            </div>
+
+            <ul class="mb-5">
+                <li>Best 2 of 3</li>
+                <li>1st and 2nd game to 11 points, 3rd game to 7 points</li>
+                <li>2 matches/week with 40 minute time limit</li>
+            </ul>
+
+            <div class="flex justify-between">
+                <div class="self-center"><strong>Dinks gift certificates awarded to top 3 teams</strong></div>
+                <div class="flex flex-col">
+                    <button class="rounded bg-dinks-red hover:bg-dinks-red-dark m-2 p-2">
+                        Register
+                    </button>
+                    <p class="text-gray-400 text-sm">*Must be a dinks member to participate</p>
+                </div>
+            </div>
+        </figure>
+    </section>
+
+    <!-- Tournaments -->
+    <section>
+        <h2 class="text-4xl">Tournaments</h2>
+
+    </section>
+</article>
