leagues page, more shadows

--- a/src/app/become-a-sponsor/become-a-sponsor.component.html
+++ b/src/app/become-a-sponsor/become-a-sponsor.component.html
@@ -6,10 +6,10 @@
     </p>
     <article class="grid grid-cols-3 gap-12 h-96">
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-amber-800 h-full w-full -translate-x-1.5 translate-y-1.5"
+            <div class="relative rounded bg-amber-300 h-full w-full -translate-x-1.5 translate-y-1.5"
                 style="z-index: -1;">
             </div>
-            <div class="flex flex-col py-8 -translate-y-full">
+            <div class="flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">Dinks Gold Sponsor</strong>
                 </div>
@@ -19,16 +19,16 @@
                     <li>Logo on website for 1 year</li>
                     <li>1 VIP tier annual membership</li>
                 </ul>
-                <p class="text-4xl text-amber-800 text-center">
+                <p class="text-4xl text-amber-300 text-center">
                     $1000/year
                 </p>
             </div>
         </figure>
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-amber-300 h-full w-full -translate-x-1.5 translate-y-1.5"
+            <div class="relative rounded bg-sky-500 h-full w-full -translate-x-1.5 translate-y-1.5"
                 style="z-index: -1;">
             </div>
-            <div class="flex flex-col py-8 -translate-y-full">
+            <div class="flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">Premier Entry Sponsor</strong>
                 </div>
@@ -39,14 +39,14 @@
                     <li>Logo on website for 1 year</li>
                     <li>1 VIP tier annual membership</li>
                 </ul>
-                <p class="text-4xl text-amber-300 text-center">$2500/year</p>
+                <p class="text-4xl text-sky-500 text-center">$2500/year</p>
             </div>
         </figure>
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-sky-500 h-full w-full -translate-x-1.5 translate-y-1.5"
+            <div class="relative rounded bg-violet-600 h-full w-full -translate-x-1.5 translate-y-1.5"
                 style="z-index: -1;">
             </div>
-            <div class="rounded flex flex-col py-8 -translate-y-full">
+            <div class="rounded flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">"The Big Dill" Court Sponsor</strong>
                 </div>
@@ -58,7 +58,7 @@
                     <li>Logo on website for 1 year</li>
                     <li>1 VIP tier annual membership</li>
                 </ul>
-                <p class="text-4xl text-sky-500 text-center">$5000/year</p>
+                <p class="text-4xl text-violet-600 text-center">$5000/year</p>
             </div>
         </figure>
     </article>
