--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,7 +1,7 @@
 <main>
     <h1 class="text-5xl text-center my-16">Rates & Memberships</h1>
     <!-- Rates -->
-    <article class="bg-striped p-5 mb-10">
+    <article class="bg-striped px-10 pt-5 pb-10 mb-10 shadow-xl">
         <h2 class="text-4xl mb-5">Rates <em class="text-gray-400 text-3xl">(Membership required)</em></h2>
         <!-- Open play -->
         <section class="grid grid-cols-2 gap-x-5 text-center">
@@ -91,31 +91,31 @@
             <!-- Limited -->
             <tbody>
                 <tr>
-                    <td class="rounded border-2 border-amber-800 p-5">Limited</td>
-                    <td class="rounded border-2 border-amber-800 p-5">$45</td>
-                    <td class="rounded border-2 border-amber-800 p-5">$9</td>
-                    <td class="rounded border-2 border-amber-800 p-5">5 days in advance</td>
-                    <td class="rounded border-2 border-amber-800 text-lg text-red-600 p-3">✘</td>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">Limited</td>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">$45</td>
+                    <td class="rounded border-2 border-amber-300 p-5 text-xl">$9</td>
+                    <td class="rounded border-2 border-amber-300 p-5">5 days in advance</td>
+                    <td class="rounded border-2 border-amber-300 text-lg text-red-600 p-3">✘</td>
                 </tr>
             </tbody>
             <!-- Standard -->
             <tbody>
                 <tr>
-                    <td class="rounded border-2 border-amber-300 p-5">Standard</td>
-                    <td class="rounded border-2 border-amber-300 p-5">$125</td>
-                    <td class="rounded border-2 border-amber-300 p-5">$8</td>
-                    <td class="rounded border-2 border-amber-300 p-5">2 weeks in advance</td>
-                    <td class="rounded border-2 border-amber-300 text-xl text-green-600 p-3">✓</td>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">Standard</td>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">$125</td>
+                    <td class="rounded border-2 border-sky-500 p-5 text-xl">$8</td>
+                    <td class="rounded border-2 border-sky-500 p-5">2 weeks in advance</td>
+                    <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
                 </tr>
             </tbody>
             <!-- VIP -->
             <tbody>
                 <tr>
-                    <td class="rounded border-2 border-sky-500 p-5">VIP</td>
-                    <td class="rounded border-2 border-sky-500 p-5">$195</td>
-                    <td class="rounded border-2 border-sky-500 p-5">$7</td>
-                    <td class="rounded border-2 border-sky-500 p-5">6 months in advance</td>
-                    <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">VIP</td>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">$195</td>
+                    <td class="rounded border-2 border-violet-600 p-5 text-xl">$7</td>
+                    <td class="rounded border-2 border-violet-600 p-5">6 months in advance</td>
+                    <td class="rounded border-2 border-violet-600 text-xl text-green-600 p-3">✓</td>
                 </tr>
             </tbody>
         </table>
@@ -123,7 +123,7 @@
             <!-- <div class="absolute bg-dotted h-48 w-80 translate-x-12 translate-y-28 rotate-1" style="z-index: -10;"> -->
             <div class="absolute bg-dotted h-48 w-80 translate-x-20 -translate-y-16" style="z-index: -10;">
             </div>
-            <div class="flex-col justify-around bg-dinks-blue px-6 py-6">
+            <div class="flex-col justify-around bg-dinks-blue px-6 py-6  shadow-xl">
                 <div class="pb-7">
                     <div class="mb-3"><strong class="text-xl">All tiers include:</strong></div>
                     <p>
