--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header>
-  <nav class="grid grid-cols-12 p-5">
+  <!-- desktop -->
+  <nav class="grid grid-cols-12 p-5 max-md:hidden">
     <div class="col-span-2"><a [routerLink]="['/home']"><img src="combinedIconHorizontal.png" /></a></div>
     <div class="col-span-9 text-center pt-2">
       <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button"
@@ -21,14 +22,51 @@
       </button>
     </div>
   </nav>
+
+  <!-- mobile -->
+  <nav class="grid grid-cols-6 p-5 md:hidden">
+    <button class="text-dinks-blue" (click)="toggleMenu()">
+      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
+        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+      </svg>
+    </button>
+    <div class="col-span-5 w-64"><a [routerLink]="['/home']"><img src="combinedIconHorizontal.png" /></a></div>
+    @if(menu){
+    <div class="flex flex-col -translate-x-3 mt-5 w-screen">
+      <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">Home</a>
+      <a class="nav-button" [routerLink]="['/rates-memberships']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">Rates/Memberships</a>
+      <a class="nav-button" [routerLink]="['/leagues-tournaments']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">Leagues/Tournaments</a>
+      <a class="nav-button" [routerLink]="['/instruction']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">Instruction</a>
+      <a class="nav-button" [routerLink]="['/about']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">About us</a>
+      <a class="nav-button" [routerLink]="['/faq']" routerLinkActive="active-nav-button"
+        ariaCurrentWhenActive="page">FAQ</a>
+    </div>
+    }
+    <div class="col-span-1 mt-1 max-md:hidden" [routerLink]="['/reserve']">
+      <button class="rounded bg-dinks-red hover:bg-dinks-red-dark text-white text-md px-5 py-2">
+        Reserve court
+      </button>
+    </div>
+  </nav>
 </header>
 
-<main class="container mx-auto px-4 py-24">
+<main class="container mx-auto px-4 pt-16">
   <router-outlet></router-outlet>
 </main>
 
+<div class="fixed bottom-0 p-4 w-screen md:hidden" [routerLink]="['/reserve']">
+  <button class="rounded bg-dinks-red hover:bg-dinks-red-dark w-full text-white text-md px-5 py-2">
+    Reserve court
+  </button>
+</div>
+
 <footer>
-  <div class="footer p-5 grid grid-cols-2">
+  <div class="footer p-5 grid grid-cols-2 bg-zinc-900">
     <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
       <img src="facebook.png">
     </a>
