--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -155,15 +155,10 @@
             <li>Ability to book 5 days in advance</li>
             <li>Weekday Open Play $9/session</li>
         </ul>
-        <div class="flex justify-between">
-            <span class="flex">
-                <p class="text-2xl">$45</p>
-                <p class="text-sm mt-3 ml-1">/year</p>
-            </span>
-            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded px-3 mt-1" (click)="toggleModal()">
-                Sign me up!
-            </button>
-        </div>
+        <span class="flex">
+            <p class="text-2xl">$45</p>
+            <p class="text-sm mt-3 ml-1">/year</p>
+        </span>
     </div>
     <!-- Standard -->
     <div class="rounded border-2 border-sky-500 p-5 shadow-xl">
@@ -179,15 +174,10 @@
             <li>Weekday Open Play $8/session</li>
             <li>Early access to tournaments & special events</li>
         </ul>
-        <div class="flex justify-between">
-            <span class="flex">
-                <p class="text-2xl">$125</p>
-                <p class="text-sm mt-3 ml-1">/year</p>
-            </span>
-            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded px-3 mt-1" (click)="toggleModal()">
-                Sign me up!
-            </button>
-        </div>
+        <span class="flex">
+            <p class="text-2xl">$125</p>
+            <p class="text-sm mt-3 ml-1">/year</p>
+        </span>
     </div>
     <!-- VIP -->
     <div class="rounded border-2 border-violet-600 p-5 shadow-xl">
@@ -203,12 +193,23 @@
             <li>Weekday Open Play $7/session</li>
             <li>Early access to tournaments & special events</li>
         </ul>
-        <div class="flex justify-between">
-            <span class="flex">
-                <p class="text-2xl">$195</p>
-                <p class="text-sm mt-3 ml-1">/year</p>
-            </span>
-            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded px-3 mt-1" (click)="toggleModal()">
+        <span class="flex">
+            <p class="text-2xl">$195</p>
+            <p class="text-sm mt-3 ml-1">/year</p>
+        </span>
+    </div>
+    <div class=" rounded m-4">
+        <div class="absolute bg-dotted h-64 w-11/12 -translate-x-4 -translate-y-5 rotate-3" style="z-index: -10;">
+        </div>
+        <div class="justify-around bg-dinks-blue px-6 py-6 shadow-xl">
+            <div class="pb-7">
+                <div class="mb-3"><strong class="text-xl">All tiers include:</strong></div>
+                <p>
+                    Personalized door access upon signing up for open play or booking a
+                    court
+                </p>
+            </div>
+            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2 mt-4 w-full" (click)="toggleModal()">
                 Sign me up!
             </button>
         </div>
@@ -220,14 +221,14 @@
     <figure class="bg-smoked-background fixed w-screen h-screen top-1/2 left-1/2"
         style=" transform: translate(-50%, -50%)" (click)="toggleModal()">
     </figure>
-    <figure class=" bg-dinks-blue rounded fixed py-8 px-5"
+    <figure class="bg-dinks-blue rounded fixed py-8 px-5 max-md:w-11/12"
         style="top: 50%; left: 50%;  transform: translate(-50%, -50%); z-index: 1">
         <!-- X button -->
         <button (click)="toggleModal()" class="text-2xl absolute p-3" style="top: 0; right: 0; ">✕</button>
 
         <!-- Content -->
         <div class="mb-5 ml-5"><strong class="text-3xl">How to sign up for a membership:</strong></div>
-        <div class="grid grid-cols-2 gap-8 p-5">
+        <div class="grid md:grid-cols-2 max-md:grid-cols-1 gap-8 p-5">
             <div class="rounded border-2 border-gray-600 p-5">
                 <strong class="text-lg">Download the app!</strong>
                 <ul class="list-decimal mt-4 ml-5 ">
